# ox-onnx

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py
docs/: model.interfaces.md
ox_onnx/: config.py  extract.py  model_id.py  raise_errors.py  runtime.py  utils.py
ox_onnx/interface/: base.py  sentence_transformers_all_MiniLM_L6_v2.py
test/: test.download.py  test.model.py  test.vector.operations.py
